--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -50,7 +50,7 @@ $home-height: 620px;
 $home-height-threshold3: 500px;
 $home-height-threshold1: 500px;
 
-// Parameters of form's text area and button 
+// Contact
 $textarea__button-width: 100px;
 // $textbox-width: 100%;
 
