--- a/src/sass/components/Footer.scss
+++ b/src/sass/components/Footer.scss
@@ -1,8 +1,13 @@
 @import '../helpers/variables.scss';
 
 #Footer {
-    height: 200px;
+    border-top: 1px solid $red-logo;
+    height: 100px;
     background-color: $black;
     position: relative;
     z-index: 1; // For hiding laptop's image
+    span {
+        color: $silver;
+        font-family: aeonik;
+    }
 }
