Cards hover animations done

--- a/src/sass/components/Footer.scss
+++ b/src/sass/components/Footer.scss
@@ -12,3 +12,12 @@
         text-align: center;
     }
 }
+
+@media (max-width: $threshold1) {
+    #Footer {
+        height: 51px;
+        p {
+            font-size: 13px;
+        }
+    }
+}
