--- a/src/sass/components/Projects/Card/Card.scss
+++ b/src/sass/components/Projects/Card/Card.scss
@@ -17,6 +17,10 @@
             width: 100%;
             perspective: 100px;
             padding: 0;
+            :not(:hover) {
+                transform: translateZ(0);
+                transition: transform 1s;
+            }
             :hover {
                 transform: translateZ(30px);
                 transition: transform 1s;
