--- a/src/sass/components/Projects/Card/Card.scss
+++ b/src/sass/components/Projects/Card/Card.scss
@@ -42,3 +42,9 @@
         cursor: default;
     }
 }
+
+.animated {
+    transform: translateX(-100%);
+    border: 3px solid green;
+    // transition: transform 1s;
+}
