--- a/src/sass/components/Home.scss
+++ b/src/sass/components/Home.scss
@@ -42,9 +42,9 @@
                         text-align: left;
                         margin: 0;
                         line-height: 0;
-                        &:nth-of-type(3) {
-                            color: $red-logo;
-                        }
+                        // &:nth-of-type(3) {
+                        //     color: $red-logo;
+                        // }
                     }
                 }
             }
@@ -120,7 +120,6 @@
                 padding: 90px 0 140px;
                 .__title {
                     font-size: 28px;
-                    // text-align: center;
                 }
                 .__show {
                     .__beginning {
