--- a/src/sass/components/Contact.scss
+++ b/src/sass/components/Contact.scss
@@ -39,13 +39,14 @@
             margin: 20px auto;
             .__title {
                 @extend %titles;
-                background-color: black;
+                background-color: hsl(0, 0%, 0%, 0);
             }
             .__desc {
-                color: $silver;
                 font-family: aeonik;
                 font-size: 18px;
+                color: $silver;
                 background-color: black;
+                background-color: hsl(0, 0%, 0%, 0);
             }
 
             // Box with e-mail and phone number
@@ -127,6 +128,16 @@
                     }
                 }
             }
+            .__thanks {
+                width: 100%;
+                p {
+                    font-family: aeonik;
+                    font-size: 18px;
+                    color: $silver;
+                    background-color: hsl(0, 0%, 0%, 0);
+                    padding-top: 48px;
+                }
+            }
         }
     }
 }
@@ -186,6 +197,12 @@
                     textarea {
                         background-color: transparent;
                     }
+                }
+            }
+            .__thanks {
+                p {
+                    padding-top: 48px 16px 0;
+                    text-align: center;
                 }
             }
         }
