--- a/src/sass/components/Header.scss
+++ b/src/sass/components/Header.scss
@@ -16,6 +16,7 @@
     .Header__logo {
         height: 100px;
         display: inline-block;
+        cursor: pointer;
     }
     .Header__menu {
         list-style-type: none;
