drop down menu animation completed

--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -37,10 +37,12 @@ $animations: 1s;
 $icon-width: 200px;
 $slider-height: 150px;
 
-// Header's height
+// Header
 $header-height: 130px;
 $header-button-width: 40px;
 $header-button-width-2: 20px;
+$header-button-height: 39px;
+$header-button-speed: 120ms;
 
 // Home 
 $home-height: 620px;
