--- a/src/sass/components/Header.scss
+++ b/src/sass/components/Header.scss
@@ -62,14 +62,17 @@
             top: 114px;
             left: 0;
             width: 100vw;
-            display: flex;
             flex-direction: column;
-            background-color: $black;
             padding: 0;
+            cursor: auto;
             li {
+                background-color: $black;
                 position: relative;
+                box-sizing: border-box; 
                 width: 100%;
                 border-bottom: 0.1px solid $red-logo;
+                height: $header-button-height;
+                cursor: pointer;
                 &:hover{
                     background-color: $silver;
                     color: $red-logo;
@@ -79,9 +82,94 @@
                 } 
             }
         }
-        .Header__menu-hidden {
-            display: none;
+        // When visible
+        .Header__menu-shown {
+            li {
+                visiblity: visible;
+            }
+            // li:nth-child(1) {
+            //     transition: transform 150ms;
+            //     z-index: 4;
+            // }
+            // li:nth-child(2) {
+            //     transition: transform 300ms;
+            //     z-index: 3;
+            // }
+            // li:nth-child(3) {
+            //     transition: transform 450ms;
+            //     z-index: 2;
+            // }
+            // li:nth-child(4) {
+            //     transition: transform 600ms;
+            //     z-index: 1;
+            // }
+            li:nth-child(1) {
+                transition: transform $header-button-speed, visibility $header-button-speed 50ms;
+                z-index: 4;
+            }
+            li:nth-child(2) {
+                transition: transform $header-button-speed * 2, visibility $header-button-speed $header-button-speed;
+                z-index: 3;
+            }
+            li:nth-child(3) {
+                transition: transform $header-button-speed * 3, visibility $header-button-speed $header-button-speed * 2;
+                z-index: 2;
+            }
+            li:nth-child(4) {
+                transition: transform $header-button-speed * 4, visibility $header-button-speed $header-button-speed * 3;
+                z-index: 1;
+            }
         }
+        .Header__menu-hidden {
+            li {
+                visibility: hidden;   
+            }
+            li:nth-child(1) {
+                transition: transform $header-button-speed * 4, visibility $header-button-speed $header-button-speed * 3;
+                transform: translateY(-$header-button-height);
+            }
+            li:nth-child(2) {
+                transition: transform $header-button-speed * 2, visibility $header-button-speed $header-button-speed * 2;
+                transform: translateY(-$header-button-height * 2);
+            }
+            li:nth-child(3) {
+                transition: transform $header-button-speed * 3, visibility $header-button-speed $header-button-speed;
+                transform: translateY(-$header-button-height * 3);
+            }
+            li:nth-child(4) {
+                transition: transform $header-button-speed, visibility $header-button-speed 50ms;
+                transform: translateY(-$header-button-height * 4);
+            }
+        }
+        // Shuffle in
+        // .Header__menu-shown {
+        //     // display: flex;
+        //     li {
+        //         transform: translateX(0vw);
+        //         opacity: 1;
+        //     }
+        //     li:nth-child(1) {
+        //         transition: all 150ms;
+        //     }
+        //     li:nth-child(2) {
+        //         transition: all 150ms 100ms;
+        //     }
+        //     li:nth-child(3) {
+        //         transition: all 150ms 200ms;
+        //     }
+        //     li:nth-child(4) {
+        //         transition: all 150ms 300ms;
+        //     }
+        // }
+        // .Header__menu-hidden {
+        //     // display: none;
+        //     li {
+        //         transform: translateX(100vw);
+        //         opacity: 0;
+        //         transition: all 100ms;
+
+        //     }
+        // }
         .Header__icons {
             width: 90px;
             padding-right: 10px;
