--- a/src/sass/components/Header.scss
+++ b/src/sass/components/Header.scss
@@ -58,13 +58,14 @@
         padding: 20px;
         .Header__menu {
             position: absolute;
-            z-index: -52;
+            z-index: -1;
             top: 114px;
             left: 0;
             width: 100vw;
             flex-direction: column;
             padding: 0;
             cursor: auto;
+            overflow: hidden;
             li {
                 background-color: $black;
                 position: relative;
@@ -73,103 +74,62 @@
                 border-bottom: 0.1px solid $red-logo;
                 height: $header-button-height;
                 cursor: pointer;
+
                 &:hover{
                     background-color: $silver;
-                    color: $red-logo;
                     color: $black;
                     font-weight: 1000;
                     letter-spacing: .5px;
                 } 
             }
-        }
-        // When visible
-        .Header__menu-shown {
-            li {
-                visiblity: visible;
-            }
-            // li:nth-child(1) {
-            //     transition: transform 150ms;
-            //     z-index: 4;
-            // }
-            // li:nth-child(2) {
-            //     transition: transform 300ms;
-            //     z-index: 3;
-            // }
-            // li:nth-child(3) {
-            //     transition: transform 450ms;
-            //     z-index: 2;
-            // }
-            // li:nth-child(4) {
-            //     transition: transform 600ms;
-            //     z-index: 1;
-            // }
             li:nth-child(1) {
-                transition: transform $header-button-speed, visibility $header-button-speed 50ms;
-                z-index: 4;
+                z-index: -1;
             }
             li:nth-child(2) {
-                transition: transform $header-button-speed * 2, visibility $header-button-speed $header-button-speed;
-                z-index: 3;
+                z-index: -2;
             }
             li:nth-child(3) {
-                transition: transform $header-button-speed * 3, visibility $header-button-speed $header-button-speed * 2;
-                z-index: 2;
+                z-index: -3;
             }
             li:nth-child(4) {
-                transition: transform $header-button-speed * 4, visibility $header-button-speed $header-button-speed * 3;
-                z-index: 1;
+                z-index: -4;
+            }
+        }
+        // Sliding in effect
+        .Header__menu-shown {
+            li {
+                transform: translateX(0vw);
+            }
+            li:nth-child(1) {
+                transition: transform $header-button-speed ease-out;
+            }
+            li:nth-child(2) {
+                transition: transform $header-button-speed  ease-out $header-button-speed * 0.5;
+            }
+            li:nth-child(3) {
+                transition: transform $header-button-speed  ease-out $header-button-speed;
+            }
+            li:nth-child(4) {
+                transition: transform $header-button-speed  ease-out $header-button-speed * 1.5;
             }
         }
         .Header__menu-hidden {
             li {
-                visibility: hidden;   
+                transform: translateX(100vw);
             }
             li:nth-child(1) {
-                transform: translateY(-$header-button-height);
-                transition: transform $header-button-speed * 1, visibility $header-button-speed $header-button-speed * 1 - 50ms;
+                transition: transform $header-button-speed  ease-in $header-button-speed * 1.5;
             }
             li:nth-child(2) {
-                transform: translateY(-$header-button-height * 2);
-                transition: transform $header-button-speed * 2, visibility $header-button-speed $header-button-speed * 2 - 50ms;
+                transition: transform $header-button-speed  ease-in $header-button-speed;
             }
             li:nth-child(3) {
-                transform: translateY(-$header-button-height * 3);
-                transition: transform $header-button-speed * 3, visibility $header-button-speed $header-button-speed * 3 - 50ms;
+                transition: transform $header-button-speed  ease-in $header-button-speed * 0.5;
             }
             li:nth-child(4) {
-                transform: translateY(-$header-button-height * 4);
-                transition: transform $header-button-speed, visibility $header-button-speed $header-button-speed * 4 - 50ms;
+                transition: transform $header-button-speed ease-in;
             }
         }
-        // Shuffle in
-        // .Header__menu-shown {
-        //     // display: flex;
-        //     li {
-        //         transform: translateX(0vw);
-        //         opacity: 1;
-        //     }
-        //     li:nth-child(1) {
-        //         transition: all 150ms;
-        //     }
-        //     li:nth-child(2) {
-        //         transition: all 150ms 100ms;
-        //     }
-        //     li:nth-child(3) {
-        //         transition: all 150ms 200ms;
-        //     }
-        //     li:nth-child(4) {
-        //         transition: all 150ms 300ms;
-        //     }
-        // }
-        // .Header__menu-hidden {
-        //     // display: none;
-        //     li {
-        //         transform: translateX(100vw);
-        //         opacity: 0;
-        //         transition: all 100ms;
-
-        //     }
-        // }
         .Header__icons {
             width: 90px;
             padding-right: 10px;
