formats changed for webp

--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -2,7 +2,7 @@
 
 #About {
   .__wallpaper1 {
-    background-image: url('../../assets/about/computers.jpg');
+    background-image: url('../../assets/about/computers.webp');
     background-position: center;
     height: 100vh;
   }
