--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -28,7 +28,7 @@ $red-logo: #FF4057;
 $red-lighter: hsl(353, 100%, 70%);
 
 // Animation time
-$animations: 1s;
+$animations-time: 1s;
 
 // Slider's parameters
 $icon-width: 200px;
