Changing animation of contact section button

--- a/src/sass/components/Contact.scss
+++ b/src/sass/components/Contact.scss
@@ -124,6 +124,7 @@
                     &:hover {
                         color: $silver;
                         border-color: $red-logo;
+                        transition: all 400ms;
                     }
                 }
             }
