--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -45,6 +45,7 @@ $header-button-speed: 200ms;
 $home-height: 620px;
 $home-height-threshold3: 500px;
 $home-height-threshold1: 500px;
+$buttons-height: 60px;
 
 // Contact
 $textarea__button-width: 100px;
