--- a/src/sass/components/Home.scss
+++ b/src/sass/components/Home.scss
@@ -49,17 +49,20 @@
                 margin-top: 60px;
                 // The button
                 a {
-                    height: 180px;
-                    cursor: pointer;
-                    text-decoration: none;
-                    padding: 8px 16px;
-                    font-weight: 500;
-                    border-radius: 30px;
+                    // text-transform: uppercase;
+                    box-sizing: border-box;
+                    height: $buttons-height;
+                    // line-height: $buttons-height;
+                    padding: $buttons-height/5.5 16px;
                     color: $red-logo;
                     border: 1.5px solid $red-logo;
-
-                    transition: all 300ms;
+                    border-radius: $buttons-height / 2;
+                    font-weight: 500;
+                    text-decoration: none;
+                    cursor: pointer;
+                    
                     position: relative;
+                    display: inline-block; // to make overflow: hidden; working
                     overflow: hidden;
                     z-index: 1;
 
@@ -67,12 +70,12 @@
                         content: '';
                         position: absolute;
                         bottom: 0;
-                        left: 50%;
+                        left: 0;
                         width: 0%;
                         height: 100%;
+                        transition: all .4s;
                         background-color: $red-logo;
-                        transition: all .3s;
-                        border-radius: 10rem;
+                        border-radius: 10px;
                         z-index: -1;
                     }
                     &:hover {
