--- a/src/sass/components/Preloader.scss
+++ b/src/sass/components/Preloader.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: wrap 0.9s calc($animations-time + 2s) ease-in;
+    animation: wrap 4s calc($animations-time + 2s) ease-in;
 
     .__box {      
         display: flex;
@@ -129,11 +129,12 @@
     }
 }
 
+// Animation of removing whole Preloader
 @keyframes wrap {
     0% {
         transform: translateY(0);
     }
-    70% {
+    23% {
         transform: translateY(-200%);
     }
     100% {
